--- a/design.css
+++ b/design.css
@@ -1,74 +1,97 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Vegur, 'PT Sans', Verdana, sans-serif;
     background-color: #121212;
-    /* Fondo oscuro */
     color: #e0e0e0;
-    /* Texto claro */
 }
 
 .container {
     max-width: 600px;
     background-color: #1e1e1e;
-    /* Fondo del contenedor */
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 h1 {
-    color: #1db954;
-    /* Color verde de Spotify */
+    color: #1ed05e;
 }
 
-.input-group .form-control {
+.input-group {
+    position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    transition: transform 0.5s;
+
+}
+
+.input-group .input-music {
     background-color: #333;
-    /* Fondo oscuro para el campo de entrada */
     color: #e0e0e0;
-    /* Texto claro en el campo de entrada */
-    border: 1px solid #444;
-    /* Borde del campo de entrada */
+    border: none;
+    border-radius: 50px 0 0 50px;
+    padding: 10px 40px;
+    flex: 1;
+}
+
+.input-group .input-music:hover,
+.input-group .input-music:focus {
+    background-color: #444;
+    border: 1px solid #fff;
+    outline: none;
+}
+
+.input-group .input-group-append {
+    display: flex;
 }
 
 .input-group .btn-outline-light {
+    border-radius: 0 50px 50px 0;
+    border-left: 0;
     border: 1px solid #444;
-    /* Borde del botón */
     color: #e0e0e0;
-    /* Texto claro en el botón */
+    padding: 10px 20px;
+}
+
+.input-group:hover .fa-solid {
+    transform: scale(1.1);
 }
 
 .input-group .btn-outline-light:hover {
     background-color: #444;
-    /* Fondo oscuro en hover */
-    color: #1db954;
-    /* Color verde de Spotify */
+    color: #1ed05e;
 }
 
-.btn-success {
-    background-color: #1db954;
-    /* Color verde de Spotify */
-    border-color: #1db954;
-    /* Borde verde de Spotify */
+.open-folder {
+    background-color: #1ed05e;
+    border-color: #1ed05e;
+    border-radius: 20px;
+    padding: 5px 20px;
+    border: none;
+    transition: transform 0.3s;
 }
 
-.btn-success:hover {
+.open-folder:hover {
     background-color: #1aa34a;
-    /* Color verde más oscuro en hover */
     border-color: #1aa34a;
-    /* Borde verde más oscuro en hover */
+    outline: none;
+    transform: scale(1.04);
 }
 
-.btn-primary {
-    background-color: #1db954;
-    /* Color verde de Spotify */
-    border-color: #1db954;
-    /* Borde verde de Spotify */
+.download-button {
+    background-color: #1ed05e;
+    color: rgb(0, 0, 0);
+    border-color: #1ed05e;
+    border: none;
+    padding: 20px 40px;
+    border-radius: 50px;
+    transition: transform 0.1s;
 }
 
-.btn-primary:hover {
+.download-button:hover {
     background-color: #1aa34a;
-    /* Color verde más oscuro en hover */
     border-color: #1aa34a;
-    /* Borde verde más oscuro en hover */
+    transform: scale(1.02);
 }
 
 #currentPath {
